--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minesweeper</title>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
 </head>
 <body>
+    <div class="game-container">
+        <h1>Minesweeper</h1>
+        <div class="board" id="board"></div>
+        <button id="resetButton">TRY AGAIN</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
